Reworking API to make is actually RESTful, and set up trading map controller
