# cointrum-mainapi/src/services/tradinghub/classifier/routes.ts
@@ -1,29 +1,26 @@
 import { Request, Response } from "express";
-// import { getPlacesByName } from "./SearchController";
-import { checkSearchParams } from "../../../middleware/checks";
+import { checkTradingHubClassifierParams } from "../../../middleware/checks";
 
 export default [
   {
     path:
-      "/api/v1/tradinghub/{tradingmapid}/classifier/{classifierid}/getConfidenceValues",
+      "/api/v1/tradinghub/:tradingmapid/classifier/:classifierid/getconfidencevalues",
     method: "get",
     handler: [
-      checkSearchParams,
-      async ({ query }: Request, res: Response) => {
-        //const result = await getPlacesByName(query.q);
-        res.status(200).send({});
+      checkTradingHubClassifierParams,
+      async ({ params, body }: Request, res: Response) => {
+        res.status(200).send(params);
       }
     ]
   },
   {
     path:
-      "/api/v1/tradinghub/{tradingmapid}/classifier/{classifierid}/setConfidenceValues",
+      "/api/v1/tradinghub/:tradingmapid/classifier/:classifierid/setconfidencevalues",
     method: "post",
     handler: [
-      checkSearchParams,
-      async ({ query }: Request, res: Response) => {
-        //const result = await getPlacesByName(query.q);
-        res.status(200).send({});
+      checkTradingHubClassifierParams,
+      async ({ params, body }: Request, res: Response) => {
+        res.status(200).send(params);
       }
     ]
   }
